fix alignment index

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -151,6 +151,11 @@
 
 /* GAMES INDEX */
 
+.index-row {
+  display: flex;
+  justify-content: center;
+}
+
 .card {
   // display: flex;
   // flex-wrap: wrap;
@@ -174,7 +179,7 @@
 
 .games-index {
   display: flex; 
-  // flex-wrap: wrap;
+  align-content: center;
   font-family: 'Nunito Sans', sans-serif;
   font-weight: 800;
   text-align: center;
